Update address exclusion check
A list of excluded addresses can be provided with `--scan.bannedAddress`
flag.

The loopback and private IPs will be excluded by default.
To let the private addresses a `--scan.allowPrivateAddresses` flag has
to be set.

--- a/examples/docker-compose.yaml
+++ b/examples/docker-compose.yaml
@@ -34,3 +34,4 @@ services:
       - bootstrap-0.test.keep.network:9601
       - --source.address
       - bootstrap-1.test.keep.network:9601
+      - --scan.allowPrivateAddresses
